# quetzal-CRUMBS

./: .gitignore  0-installation.html  1-nest.html  2-gbif.html  3-chelsa.html  4-sdm.html  CHANGELOG.md  Pipfile  README.md  api.html  gbif.html  genindex.html  index.html  nest.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py
.circleci/: config.yml
.github/workflows/: build_documentation.yml  default.yml  docs.yml  pull_request.yml  release.yml  test_and_upload_to_testpypi.yml  tests.yml  unit_tests.yml  upload-to-pip.yml  upload_to_testpypi.yml  wheels.yml
_autosummary/: crumbs.bpp.html  crumbs.bpp.nb_species_posterior_probabilities.html  crumbs.chelsa.cli.html  crumbs.chelsa.cli.options.get_parser.html  crumbs.chelsa.cli.options.get_timesID_args.html  crumbs.chelsa.cli.options.get_variables_args.html  crumbs.chelsa.cli.options.html  crumbs.chelsa.cli.request_cmd.html  crumbs.chelsa.cli.request_cmd.main.html  crumbs.chelsa.helpers.get_timesID_args.html  crumbs.chelsa.helpers.get_variables_args.html  crumbs.chelsa.helpers.html  crumbs.chelsa.html  crumbs.chelsa.request.html  crumbs.chelsa.request.request.html  crumbs.gbif.cli.html  crumbs.gbif.cli.options.get_parser.html  crumbs.gbif.cli.options.html  crumbs.gbif.cli.request_cmd.html  crumbs.gbif.cli.request_cmd.main.html  crumbs.gbif.html  crumbs.gbif.request.html  crumbs.gbif.request.request.html  crumbs.gbif.utils.bounds_to_polygon.html  crumbs.gbif.utils.html  crumbs.gbif.utils.paginated_search.html  crumbs.gbif.utils.preprocess.html  crumbs.gbif.utils.to_csv.html  crumbs.gbif.utils.to_polygon.html  crumbs.gbif.utils.to_shapefile.html  crumbs.get_failed_simulations_rowids.get_failed_simulations_rowids.html  crumbs.get_failed_simulations_rowids.html  crumbs.get_failed_simulations_rowids.main.html  crumbs.get_gbif.bounds_to_polygon.html  crumbs.get_gbif.html  crumbs.get_gbif.main.html  crumbs.get_gbif.paginated_search.html  crumbs.get_gbif.preprocess.html  crumbs.get_gbif.search_gbif.html  crumbs.get_gbif.to_csv.html  (+82 more)
_modules/: index.html
_modules/crumbs/: bpp.html  get_failed_simulations_rowids.html  get_gbif.html  get_successful_simulations_rowids.html  phylip2arlequin.html  retrieve_parameters.html  sample.html  sequence.html
_sources/: 0-installation.rst.txt  1-nest.rst.txt  2-gbif.rst.txt  3-chelsa.rst.txt  4-sdm.rst.txt  gbif.rst.txt  index.rst.txt  nest.rst.txt
_sources/_autosummary/: crumbs.bpp.nb_species_posterior_probabilities.rst.txt  crumbs.bpp.rst.txt  crumbs.chelsa.cli.options.get_parser.rst.txt  crumbs.chelsa.cli.options.get_timesID_args.rst.txt  crumbs.chelsa.cli.options.get_variables_args.rst.txt  crumbs.chelsa.cli.options.rst.txt  crumbs.chelsa.cli.request_cmd.main.rst.txt  crumbs.chelsa.cli.request_cmd.rst.txt  crumbs.chelsa.cli.rst.txt  crumbs.chelsa.helpers.get_timesID_args.rst.txt  crumbs.chelsa.helpers.get_variables_args.rst.txt  crumbs.chelsa.helpers.rst.txt  crumbs.chelsa.request.request.rst.txt  crumbs.chelsa.request.rst.txt  crumbs.chelsa.rst.txt  crumbs.gbif.cli.options.get_parser.rst.txt  crumbs.gbif.cli.options.rst.txt  crumbs.gbif.cli.request_cmd.main.rst.txt  crumbs.gbif.cli.request_cmd.rst.txt  crumbs.gbif.cli.rst.txt  crumbs.gbif.request.request.rst.txt  crumbs.gbif.request.rst.txt  crumbs.gbif.rst.txt  crumbs.gbif.utils.bounds_to_polygon.rst.txt  crumbs.gbif.utils.paginated_search.rst.txt  (+97 more)
crumbs/: __init__.py  bpp.py  fasta2phylip.py  get_gbif.py  get_successful_simulations_rowids.py  phylip2arlequin.py  random_lonlat.py  retrieve_parameters.py  sample.py  sequence.py  simulate_phylip_sequences.py
docs/: 0-installation.rst  1-nest.rst  2-gbif.rst  3-chelsa.rst  4-sdm.rst  Makefile  api.rst  conf.py  gbif.rst  index.rst  nest.rst  requirements.txt
docs2/: Makefile
test_data/: sequences.fasta
tests/: context.py  integration.sh  pytest.ini  test.py  test_animate.py  test_bpp_output_processing.py  test_chelsa.py  test_database_access.py  test_get_chelsa.py  test_get_gbif.py  test_phylip_to_arlequin.py  test_raster_utils.py  test_sdm.py  test_sequence.py  utils.py
(+120 files in other folders)
