[metadata]
name = quetzal_crumbs
version = 1.0.0
author = Arnaud Becheler
author_email = arnaud.becheler@gmail.com
description = General utility scripts for Quetzal projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Becheler/quetzal-CRUMBS
project_urls =
    Bug Tracker = https://github.com/Becheler/quetzal-CRUMBS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
