[metadata]

name = quetzal_crumbs
version = 1.0.17
author = Arnaud Becheler
author_email = arnaud.becheler@gmail.com
description = General utility scripts for Quetzal projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Becheler/quetzal-CRUMBS
project_urls =
    Bug Tracker = https://github.com/Becheler/quetzal-CRUMBS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    examples*
    docs*
    tests*

[options.entry_points]
console_scripts =
    crumbs-get-gbif = crumbs.gbif.cli.request_cmd:main
    crumbs-get-chelsa = crumbs.chelsa.cli.request_cmd:main
    crumbs-fit-sdm = crumbs.sdm.cli.fit_cmd:main
    crumbs-extrapolate-sdm = crumbs.sdm.cli.extrapolate_cmd:main
    crumbs-clip-circle = crumbs.gis.cli.clip_circle_cmd:main
    crumbs-rotate-rescale = crumbs.gis.cli.rotate_and_rescale_cmd:main
    crumbs-resample = crumbs.gis.cli.resample_cmd:main
    crumbs-interpolate = crumbs.gis.cli.interpolate_cmd:main
    crumbs-animate = crumbs.gis.cli.animate_cmd:main
