[metadata]

name             = quetzal_crumbs
version          = attr: crumbs.__version__
author           = Arnaud Becheler
author_email     = arnaud.becheler@gmail.com
maintainer       = Arnaud Becheler
maintainer_email = arnaud.becheler@gmail.com
description      = General utility scripts for Quetzal projects
url              = https://github.com/Becheler/quetzal-CRUMBS
keywords         = python3, IDDC, coalescence, phyloeography, simulation
platforms        = ubuntu, macos
license          = GPL-3 LGPL-3

project_urls     =
    Docs = https://becheler.github.io/quetzal-CRUMBS/
    Bugs = https://github.com/Becheler/quetzal-CRUMBS/issues
    C.I. = https://github.com/Becheler/quetzal-CRUMBS/actions

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    examples*
    docs*
    tests*

[options.entry_points]
console_scripts =
    crumbs-get-gbif = crumbs.gbif.cli.request_cmd:main
    crumbs-get-chelsa = crumbs.chelsa.cli.request_cmd:main
    crumbs-fit-sdm = crumbs.sdm.cli.fit_cmd:main
    crumbs-extrapolate-sdm = crumbs.sdm.cli.extrapolate_cmd:main
    crumbs-clip-circle = crumbs.gis.cli.clip_circle_cmd:main
    crumbs-rotate-rescale = crumbs.gis.cli.rotate_and_rescale_cmd:main
    crumbs-resample = crumbs.gis.cli.resample_cmd:main
    crumbs-interpolate = crumbs.gis.cli.interpolate_cmd:main
    crumbs-animate = crumbs.gis.cli.animate_cmd:main
